<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context=".Edit.AccEdit">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/edit_acc_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mid_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/add_location_toolbar"
            app:titleTextColor="@color/white" />

        <EditText
            android:id="@+id/edit_acc_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_corners_input"
            android:hint="@string/input_location_name"
            android:inputType="text"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:textCursorDrawable="@drawable/cursor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_acc_toolbar" />

        <EditText
            android:id="@+id/edit_acc_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_corners_input"
            android:hint="@string/input_location_type"
            android:inputType="text"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:textCursorDrawable="@drawable/cursor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_acc_name" />

        <EditText
            android:id="@+id/edit_acc_town"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_corners_input"
            android:hint="@string/input_location_city"
            android:inputType="text"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:textCursorDrawable="@drawable/cursor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_acc_type" />

        <EditText
            android:id="@+id/edit_acc_latitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/round_corners_input"
            android:hint="@string/input_location_latitude"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:textCursorDrawable="@drawable/cursor"
            app:layout_constraintEnd_toStartOf="@id/edit_acc_longitude"
            app:layout_constraintStart_toStartOf="@id/edit_acc_town"
            app:layout_constraintTop_toBottomOf="@id/edit_acc_town" />

        <EditText
            android:id="@+id/edit_acc_longitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corners_input"
            android:hint="@string/input_location_longitude"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:textCursorDrawable="@drawable/cursor"
            app:layout_constraintEnd_toEndOf="@id/edit_acc_name"
            app:layout_constraintStart_toEndOf="@id/edit_acc_latitude"
            app:layout_constraintTop_toTopOf="@id/edit_acc_latitude" />

        <EditText
            android:id="@+id/edit_acc_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_corners_input"
            android:hint="@string/input_location_price"
            android:inputType="text"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:textCursorDrawable="@drawable/cursor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_acc_latitude" />

        <EditText
            android:id="@+id/edit_acc_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_corners_input"
            android:hint="@string/input_location_description"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:textCursorDrawable="@drawable/cursor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_acc_price" />

        <ImageView
            android:id="@+id/edit_acc_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/light_red"
            android:padding="10dp"
            android:src="@drawable/icon_add_photo"
            app:layout_constraintBottom_toTopOf="@id/edit_town_image_preview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_acc_description" />

        <ImageView
            android:id="@+id/edit_town_image_preview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/save_edit_acc_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_acc_image" />

        <Button
            android:id="@+id/save_edit_acc_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:background="@drawable/round_corners_input"
            android:backgroundTint="@color/mid_green"
            android:text="@string/save_location_button"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_town_image_preview" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>